--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "title": "bCalendar",
     "version": "1.0.0-alpha.1",
     "author": "Bene <bene@beneroch.com>",
-    "description": "Jquery plugin that offers a calendar view to interact with data.",
+    "description": "Javascript plugin that offers a calendar view to interact with data.",
     "homepage": "http://beneroch.com/calendar/",
     "license": "MIT",
     "repository": {
@@ -19,27 +19,23 @@
         "calendar",
         "events"
     ],
+    "scripts": {
+        "build": "webpack --mode production",
+        "start": "webpack-dev-server --mode development --open"
+    },
     "devDependencies": {
-        "autoprefixer": "6.5.2",
-        "babel-preset-es2015": "6.18.0",
-        "babel-plugin-transform-es2015-classes": "6.18.0",
-        "babel-preset-stage-1": "6.16.0",
-        "babelify": "7.3.0",
-        "eslint-tap": "2.0.0",
-        "glob": "7.1.1",
-        "grunt": "1.0.1",
-        "grunt-browser-sync": "2.2.0",
-        "grunt-browserify": "5.0.0",
-        "grunt-contrib-concat": "1.0.1",
-        "grunt-contrib-cssmin": "1.0.2",
-        "grunt-contrib-uglify": "2.0.0",
-        "grunt-contrib-watch": "1.0.0",
-        "grunt-csscomb": "3.1.1",
-        "grunt-eslint": "19.0.0",
-        "grunt-postcss": "0.8.0",
-        "grunt-sass": "^2.1.0",
-        "load-grunt-config": "0.19.2",
-        "postcss-banner": "3.0.0",
-        "jquery": "3.5.0"
+        "@babel/core": "^7.23.5",
+        "@babel/preset-env": "^7.23.5",
+        "babel-loader": "^9.1.3",
+        "concat-cli": "^4.0.0",
+        "css-loader": "^6.8.1",
+        "mini-css-extract-plugin": "^2.7.6",
+        "node-sass": "^9.0.0",
+        "sass-loader": "^13.3.2",
+        "style-loader": "^3.3.3",
+        "webpack": "^5.89.0",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^4.15.1",
+        "webpack-merge-and-include-globally": "^2.3.4"
     }
 }
